--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <div data-aos="fade-up" data-aos-duration="1500">
                         <div class="tab-contents active-tab" id="activities" >
                             <ul>
-                                <li><span><span class="tab-contents-role"> Founder and President</span> (Oct 2022 - Present)</span><br>Developer Code Club</li>
+                                <li><span><span class="tab-contents-role">Founder and President</span> (Oct 2022 - Present)</span><br>Developer Code Club</li>
                                 <li><span><span class="tab-contents-role">Vice President</span> (Sep 2022 - Present)</span><br>Investment Club </li>
                                 <li><span><span class="tab-contents-role">Programming Captain </span>(Sep 2021 - Present)</span><br>Robotics Club Team 3637 </li>
                                 <li><span><span class="tab-contents-role">Recording Secretary</span> (Sep 2021 - Present)</span><br>National Speech & Debate Association</li>
@@ -280,19 +280,19 @@
                         </div>
                         <div class="tab-contents" id="volunteering">
                             <ul>
-                                <li><span><span class="tab-contents-role">Volunteer and Mentor</span> (May 2020 - Aug 2022)</span><br>ENGin</li>
-                                <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Present)</span><br>FIRST Robotics</li>
                                 <li><span><span class="tab-contents-role">Academic Tutor</span>  (Sep 2022 - Present)</span><br>Hunterdon Central Regional High School </li>
-                                <li><span><span class="tab-contents-role">Mentor</span>  (Oct 2022 - Dec 2022)</span><br>FIRST LEGO League</li>
-                                <li><span><span class="tab-contents-role">Member</span> (Dec 2022 - Present)</span><br>Staff All Star Committee</li>
+                                <li><span><span class="tab-contents-role">Committee Lead</span> (Dec 2022 - Present)</span><br>Staff All Star Committee</li>
                                 <li><span><span class="tab-contents-role">Volunteer</span>  (Apr 2023 - Present)</span><br>Hunterdon Outreach Programs</li>
+                                <li><span><span class="tab-contents-role">Mentor</span>  (Oct 2022 - Nov 2023)</span><br>FIRST LEGO League</li>
+                                <li><span><span class="tab-contents-role">Volunteer and Mentor</span> (May 2020 - Aug 2022)</span><br>ENGin</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id = "experience">
                             <ul>
-                                <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
+                                <li><span><span class="tab-contents-role">Software Developer Intern</span> (Dec 2023 - Present)</span><br>AI Human Powered Solutions</li>
                                 <li><span><span class="tab-contents-role">Computer Science Teacher</span> (June 2023 - Sep 2023)</span><br>AIGoLearning</li>
-                                <li><span><span class="tab-contents-role">Software Developer Intern</span> (Dec 2024 - Present)</span><br>AI Human Powered Solutions</li>
+                                <li><span><span class="tab-contents-role">Head Web Developer</span>  (May 2022 - Oct 2023)</span><br>FIRST Robotics</li>
+                                <li><span><span class="tab-contents-role">Software Developer</span> (Apr 2022 - Oct 2022)</span><br>HS Wrestling Team</li>
                             </ul>
                         </div>
                     
