--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <p class ="tab-links active-link" onclick="opentab('activities')">Extra-curricular Activities</p>
                         <p class ="tab-links" onclick="opentab('volunteering')">Volunteering</p>
                         <p class ="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class ="tab-links" onclick="opentab('skills')">Skills</p>
+                        <p class ="tab-links" onclick="opentab('awards')">Awards</p>
                     </div>
                     <div data-aos="fade-up" data-aos-duration="1500">
                         <div class="tab-contents active-tab" id="activities" >
@@ -244,172 +244,61 @@
                             </ul>
                         </div>
                     
-                        <div class="tab-contents" id = "skills">
-                            <div class="row">
-                                <div class="col-4">
-                                    <span>CSS</span>
-                                    <div class="progress">
-                                        <div id="css" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+                        <div class="tab-contents" id = "awards">
+                            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3500">
+                                <div class="carousel-inner">
+                                    <!-- Awards -->
+                                    <div class="carousel-item active text-center text-white py-5">
+                                        <i class="fa-solid fa-trophy"></i>
+                                        <h2>3rd in Varsity Parli Debate (Summit)</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-code"></i>
+                                        <h2>2nd in Hackathon - Trojan Hacks</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-trophy"></i>
+                                        <h2>4th in Varsity Parli Debate (Phillipsburg)</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-robot"></i>
+                                        <h2>Rookie of the Year - Robotics</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-trophy"></i>
+                                        <h2>5th Varsity Parli Debate State Competition</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-graduation-cap"></i>
+                                        <h2>Runner up - NJ Governor's School</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-star"></i>
+                                        <h2>Principal Honor Roll</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-book"></i>
+                                        <h2>AP Scholar</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-medal"></i>
+                                        <h2>Member of Honor Societies</h2>
+                                    </div>
+                                    <div class="carousel-item text-center text-white py-5">
+                                        <i class="fa-solid fa-users"></i>
+                                        <h2>Staff/Student All Star Committee</h2>
                                     </div>
                                 </div>
-                                <div class="col-4">
-                                    <span>HTML</span>
-                                    <div class="progress">
-                                        <div id="html" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Java</span>
-                                    <div class="progress">
-                                        <div id="java" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <div class="row mt-2">
-                                <div class="col-4">
-                                    <span> Protocols</span>
-                                    <div class="progress">
-                                        <div id="protocols" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Leadership</span>
-                                    <div class="progress">
-                                        <div id="leadership" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>MySQL/SQL</span>
-                                    <div class="progress">
-                                        <div id="sql" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row mt-2">
-                                <div class="col-4">
-                                    <span>Git/Github</span>
-                                    <div class="progress">
-                                        <div id="git" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>JavaScript</span>
-                                    <div class="progress">
-                                        <div id="js" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>C++</span>
-                                    <div class="progress">
-                                        <div id="cpp" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
 
-                            <div class="row mt-2">
-                                <div class="col-4">
-                                    <span>Google API</span>
-                                    <div class="progress">
-                                        <div id="googleapi" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>VS Code</span>
-                                    <div class="progress">
-                                        <div id="vscode" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>AWS</span>
-                                    <div class="progress">
-                                        <div id="aws" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row mt-2">
-                                <div class="col-4">
-                                    <span>Azure</span>
-                                    <div class="progress">
-                                        <div id="azure" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Docker</span>
-                                    <div class="progress">
-                                        <div id="docker" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Node.js</span>
-                                    <div class="progress">
-                                        <div id="node" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row mt-2">
-                                <div class="col-4">
-                                    <span>jQuery</span>
-                                    <div class="progress">
-                                        <div id="jquery" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Express.js</span>
-                                    <div class="progress">
-                                        <div id="express" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>EJS</span>
-                                    <div class="progress">
-                                        <div id="ejs" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mt-2">
-                                <div class="col-4">
-                                    <span>React.js</span>
-                                    <div class="progress">
-                                        <div id="react" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Bootstrap</span>
-                                    <div class="progress">
-                                        <div id="bootstrap" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Websockets</span>
-                                    <div class="progress">
-                                        <div id="websockets" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mt-2">
-                                <div class="col-4">
-                                    <span>Open AI's API</span>
-                                    <div class="progress">
-                                        <div id="openAI" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Python</span>
-                                    <div class="progress">
-                                        <div id="python" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                                <div class="col-4">
-                                    <span>Angular</span>
-                                    <div class="progress">
-                                        <div id="angular" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
